--- a/events.html
+++ b/events.html
@@ -69,15 +69,8 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->
     <div class="articlead" align="center">
       <p>      
-      <hr>
-          <a href="#"><img src="ads/catsbutton.jpg" alt="CityParks" width="125" height="125" onClick="MM_openBrWindow('ads/catsad.html','','scrollbars=yes,width=818,height=400')"></a>
           <hr>
           <a href="#" target="_blank" onClick="MM_openBrWindow('ads/peoplerotp.html','','scrollbars=yes,width=638,height=650')"><img src="ads/protpbutton.jpg" alt="People Reaching Out To People" width="125" height="125"></a>
-          <hr>
-          <a href="../www.harvestarmy.org/habc.html" target="_blank"><img src="ads/biblecollegebutton.jpg" alt="Word Center" width="124" height="62"></a>
-          <hr>
-      <a href="../www.praisequest.com/default.htm" target="_blank" onClick="MM_openBrWindow('ads/praisequest.html','','scrollbars=yes,width=818,height=544')"></a>
-      <p><a href="../www.rapfestinc.com/default.htm"><img src="ads/rapfestbanner125x125.gif" alt="Rap Fest" width="125" height="125"></a>
       <hr>
       <p><a href="../www.christianpost.com/default.htm" target="_blank"><img src="ads/christianpostbutton_120x215.gif" alt="Christian Post" width="120" height="215"></a>
       <hr>
@@ -119,17 +112,25 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <img src="images/donaldreid.jpg" alt="" width="57" height="75" /><br>
     </div>
                 <h2>Last Minute Tax Help!</h2>
-                <p>Looking  for ways to avoid the last-minute rush in preparing your taxes? Then here are  the top Six Golden Rules to help you navigate this last minute journey<strong> </strong>...<a href="donaldreid.html">Read More</a></p>
+                <p>Looking  for ways to avoid the last-minute rush in preparing your taxes? Then here are  the top Six Golden Rules to help you navigate this last minute journey<strong> </strong>...<a href="donaldreid.html">Read More</a><br>
+                  <br>
+                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="50" height="75" id="authorpic" /><br>
+                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic2" /><br>
     </div>
-                <h2>Probiotics - Q &amp; A</h2>
-                <p>Walk down the supermarket  aisle and you&rsquo;ll see a growing array of products infused with  probiotics. They all pro&shy;mise amazing benefits. How do you know which products  are effective? How much <strong> </strong>...<a href="elizabethmadison.html">Read More</a></p>
+                <h2>Great Commission &quot;Mantle&quot; Leaders</h2>
+                <p>For many  years as a workplace leader, I was responsible  for leading and growing 25 subordinate supervisors who led and trained their  people. Also, as President of New Jersey Christian Ministries (NJCM) from 2000  &ndash; 2011, the Lord gave us hundreds of instructors and exhibitors who mentored  Convention attendees and  <strong> </strong>...<a href="great-commission-mantle-leaders.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits"> </div>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
+                </div>
+                <h2>Focus On The Children: </h2>
+                <p>A loving HUG, yes HUG is part of our  real demonstration of love, warm, kindness, compassion. Have you given anyone a  real HUG lately? Not one of those quickie sloppy agape &ldquo;gotta go&rdquo; fake  embraces. Let&rsquo;s just keep it real. Yuck, Yuck, Yuck!!!<strong> </strong>...<a href="focuson.html">Read More</a>                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
-    </div>
+</div>
                 <h2>Oasis Singles All Day Conference </h2>
                 <p>You&rsquo;re  invited to join Christian singles of all ages, from all denominations and from  all walks of life from throughout the tri-state area for a life-changing  conference featuring teaching, worship and <strong> </strong>...<a href="cindygaldalruperto.html">Read More</a></p>
                 <div id="articlepic">
@@ -140,10 +141,10 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p>One of the  universal desires of human beings is  the desire to improve. It&rsquo;s universal. We all want to grow. We all want to get  better. We all want to improve. We all want to  make something better of our lives<strong> </strong>...<a href="matthew-singh-pinciples-for-lasting-change.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bishop-curtis-h-douglas.jpg" alt="" name="authorpic" width="56" height="75" id="authorpic3" /><br>
+                  <img style="float:right;" src="images/revival-celebration-2015-matthew-singh.jpg" alt="Pastor Matthew &amp; Ka&shy;thy Singh" width="55" height="85" /><br>
     </div>
-                <h2>Dabar Bethlehem Cathedral</h2>
-                <p><strong>Dabar Bethlehem Cathedral</strong> presents <strong>Holy Week Teach&shy;ings from the Table</strong>, <strong>March </strong><strong>29th-April 2nd  7:30pm</strong>; <strong>Good Friday, April 3rd 12pm</strong> with <strong>Rev. Leo Colon, </strong><strong>Rev. Andrea Heyward</strong><strong> </strong>...<a href="dabar-bethlehem-cathedral.html">Read More</a></p>
+                <h2>The Easter Mission</h2>
+                <p> <b>Start  believing God&rsquo;s dream for Your  life.</b> <i>It all starts with a dream.</i> It all starts with vision, an idea. What does God want to do in my life? First,  Ephesians 3:20. <i>&ldquo;God, by His mighty power  at work with&shy;in us, is able to do <b>far  more than we would ever dare to ask</b> or even dream of - infinitely beyond  our highest prayers </i><strong> </strong>...<a href="the-easter-mission.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/mark-schultz.jpg" alt="" name="authorpic" width="75" height="75" id="authorpic4" /><br>
@@ -162,12 +163,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
     </div>
                 <h2> Viewpoint:  	 March for Jesus!! </h2>
                 <p>Believers  can you ima&shy;gine a Worldwide March for Jesus. Coming together from every  nation, country, and across oceans, to march. Millions of believers carrying  banners, flags of their country, sing&shy;ing<strong> </strong>...<a href="roselictro.html">Read More</a>                </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/dr-michael-scales-and-dr-roy-s-kirton-img1464.jpg" width="158" height="75" alt="Nyack College Alumns"><br>
-</div>
-                <h2>Nyack College </h2>
-                <p><strong>Dr. Michael Scales</strong>,  President of <strong>Nyack College</strong>,  presented <strong>Dr. Roy S. Kirton</strong> with the <strong>2014 Alumnus of the Year Award</strong>, for  his service to society.&nbsp; Rev. Kirton is  the  <strong> </strong>...<a href="nyackcollege.html">Read More</a></p>
+                <p>&nbsp;</p>
                 
               </div>
             </div>
