--- a/features.htm
+++ b/features.htm
@@ -68,12 +68,8 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <hr>
           <hr>
           <a href="#" onClick="MM_openBrWindow('ads/wordcenter.html','','scrollbars=yes,width=785,height=600')"><img src="ads/wordcenterbutton.jpg" alt="The Word Center" width="124" height="124" ></a>
-          <hr>
-          <p> <a href="../www.harvestkingdom.org/default.htm" target="_blank"></a><a href="../www.teachmetopray.com/default.htm" target="_blank"><img src="images/schoolofprayer.jpg" alt="School of Prayer" width="135" height="312" border="0" /></a>
         <hr>
         <a href="../www.artechchurchinteriors.com/index.html"><img src="images/artechchurchdirad2.jpg" alt="Artech Advertisement" width="120" height="240" border="0"></a>
-          <hr>
-          <a href="../www.gnymusic.com/default.htm"><img src="ads/gnymusic.gif" alt="gnymusic" width="125" height="60" border="0"></a>
           <hr>
           <a href="classifieds.htm"><img src="ads/avaiable.jpg" alt="positions available" width="140" height="115" border="0"></a>
           <hr>
@@ -139,66 +135,44 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
+                  <img src="images/bishop-mattera-headshot.jpg" alt="Bishop Joseph Mattera " name="authorpic" width="58" height="85" id="authorpic" /></div>
+                <h2>Courtship and Dating</h2>
+                <p>Courtship  and dating are some of the least discussed topics in the church. Yet dating has  caused the most havoc, destroyed countless lives, resulted in unwanted pregnan-  cies and abortions, and even split churches apart. Since most of the church  doesn&rsquo;t teach on this subject, a va&shy;cuum exists ...<a href="courtship-and-dating.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/scott-caesar.jpg" alt="" name="authorpic" width="116" height="85" id="authorpic4" /></div>
+                <h2>Male by Birth, 
+Man by Choice</h2>
+                <p>In the  thirteenth chapter of 1Corithians, God inspires and Paul writes to males who  believe they are men. &ldquo;When I was a child I used to speak as a child, think  like a child, reason as a child. When I became a man, I did away with childish  things&rdquo;. 1Corinthians 13:11 ...<a href="male-by-birth-man-by-choice.html">Read&nbsp;More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/dr-dale-irvin.jpg" alt="" name="authorpic5" width="57" height="85" id="authorpic5" /><img src="images/dr-pauldevries.jpg" width="73" height="85" alt="Paul de Vries"></div>
+                <h2>New York Theological Seminary and New York Divinity School</h2>
+                <p>President <strong>Dale T. Irvin</strong> of <strong>New York Theolo&shy;gi&shy;cal Se&shy;minary (NY TS)</strong> and President <strong>Paul de Vries</strong> of <strong>New York Divinity School (NYDS)</strong> announced this month that the two  schools have entered into a new partnership intended to broaden the  opportunities candidates  ...<a href="new-york-theological-seminary.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
                   <img src="images/central-park.jpg" alt="" height="75" /></div>
                 <h2>Vision For New York City<br>
                 </h2>
-                <p>It started with one small group of Latino  leaders and a simple invitation. They were eager to have Luis Palau and his  team help lead an evangelistic effort reaching  the Tri-State area. Within a few more ...<a href="vision-for-new-york-city.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/t-d-jakes-jim-garlow.png" alt="" width="157" height="86" /><br>
-          </div>
-                <h2>Racial Reconciliation Summit</h2>
-                <p>When Bishop Harry Jackson, chairman of the High Impact Leadership Coalition and se&shy;nior pastor of Hope Christian Church in Washington, D.C., first called up Bishop T.D. Jakes, one of America's favorite and most influential     ...<a href="racial-reconciliation-summit.html">Read More</a>
-<div id="articlepic">
+                <p>It started with one small group of Latino  leaders and a simple invitation. They were eager to have Luis Palau and his  team help lead an evangelistic effort reaching  the Tri-State area. Within a few more ...<a href="vision-for-new-york-city.html">Read More</a>                
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/robertstearns.jpg" alt="" name="authorpic" width="62" height="75" id="authorpic2" /><br>
           </div>
                 <h2>Turning The Tide </h2>
-                <p><strong>Turning the Tide Con&shy;ference, April 24th-25th,  (Friday:6pm; Sa&shy;turday:8:30am)</strong>. This youth and young adults  conference is a gathering of hundreds of young people who are crying out for  God to       ...<a href="turning-the-tide-youth-young-adults-conference.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/jacob-burgei.jpg" alt="" name="authorpic" width="125" height="75" id="authorpic3" /><br>
-          </div>
-                <h2>The Fuel Movement<br>
-                </h2>
-                <p>The <strong>Fuel Movement</strong> is growing and expanding  in 2015 with The Fuel Training in two locations this year in New Jersey and in  New York. The Fuel Leadership Trainings are open for all Youth Pastors     ...<a href="the-fuel-movement.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/jinuthomas.jpg" alt="" name="authorpic7" width="95" height="75" id="authorpic7" /><br>
-          </div>
-                <h2>Collyde One Day</h2>
-                <p>A<b>re you a Leader? Do you consider yourself a  leader?</b> Now, I could sense, as we have asked this question  before in groups, that some of you, would immediately say &ldquo;No&rdquo;. If we probe further, you might, just like      ...<a href="collyde-one-day.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/carman.jpg" alt="Carman" height="75" /><br>
-          </div>
-                <h2>No Plan B Tour 2015 with Carman</h2>
-                <p><strong>No Plan B Tour 2015 with  Carman, Thurs&shy;day, March 26th, </strong><strong>7:00pm</strong> (Doors  open 6pm) who will be at the <strong>Village of Faith Church</strong>, 1070 Portion  Road, Farmingville, New      ...<a href="carman-no-plan-b-tour.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/dennis-and-jackie-bambino.jpg" alt="Dennis and Jackie Bambino" name="authorpic" width="58" height="75" id="authorpic8" /><br>
-          </div>
-                <h2>Living From The Inside<br>
-                </h2>
-                <p>The <strong>Church of Grace and Peace</strong> located at  1563 Old Freehold Road, Toms River, New Jersey  will be hosting a <strong>one </strong><strong>day conference</strong>, &ldquo;<strong>Living from the Inside Out</strong>&rdquo; with speakers <strong>Dennis &amp; Jackie Bambino</strong> on     ...<a href="living-from-the-inside.html">Read More</a>
-<div id="articlepic">
+                <p><strong>Turning the Tide Con&shy;ference, April 24th-25th,  (Friday:6pm; Sa&shy;turday:8:30am)</strong>. This youth and young adults  conference is a gathering of hundreds of young people who are crying out for  God to       ...<a href="turning-the-tide-youth-young-adults-conference.html">Read More</a>                
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/kenneth-and-gloria-copeland.png" alt="" name="authorpic9" width="99" height="75" id="authorpic9" /><br>
-          </div>
+        </div>
                 <h2>Living Victory</h2>
                 <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a>
 <div id="articlepic">
-                  <div class="photocredits2"> </div>
-<img src="images/freedomthroughundergroundgospeljazz-sm.jpg" alt="Gospel Jazz" width="139" height="75"><br>
-          </div>
-                <h2> Underground Gospel Jazz</h2>
-                <p><strong>Bethel Gospel Taber&shy;nacle Worship</strong> <strong>&amp;</strong> <strong>Fine Arts, Hope for Ex Offenders &amp; Relume Inc. </strong>present <strong>Freedom Through Underground Gospel Jazz</strong> featuring Grammy Award Winner <strong>Mark </strong>...<a href="freedom-through-underground-gospel-jazz.html">Read More</a>
-<div id="articlepic">
   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison2.jpg" alt="Elizabeth Madison" name="authorpic" width="63" height="75" id="authorpic6" /><br>
-        </div>
-                <h2>6 Tips for Heart Health</h2>
-                <p>You only  have one heart. You have two lungs, two kidneys, and even a regenerative liver,  but only one heart. Though it is the most important organ in the body, we tend  to take it for granted until it stops working th     ...<a href="elizabethmadison.html">Read More</a>
+                  <img src="images/elizabethmadison2.jpg" alt="Elizabeth Madison" name="authorpic" width="74" height="85" id="authorpic6" /><br>
+      </div>
+                <h2>Should You Eat Organic?</h2>
+                <p>It seems  almost every day a client asks me questions about organic foods: should I only  eat organic foods? Is non-organic food dangerous? What if I can&rsquo;t afford  organic food, should I just not buy any fruits and vegetables? There is a lot  of confusing information in the media about organic foods, and at times, a lot  of it is just hype. So to help my clients     ...<a href="elizabethmadison.html">Read More</a>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/dimassalaberriosgreyheadshot.jpg" width="67" height="75" alt="Dimas Salaberrios"><br>
