--- a/nyack-college-school-of-music.html
+++ b/nyack-college-school-of-music.html
@@ -1,22 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><!-- saved from url=(0051)http://www.loveexpressonline.com/edithstranges.html -->
-
-<html><!-- InstanceBegin template="/Templates/lovexcss2.dwt" codeOutsideHTMLIsLocked="false" -->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Editorial</title>
+<title>Welcome to the Love Express</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" -->
-<style type="text/css">
-<!--
-.style1 {font-style: italic}
-.style3 {font-weight: bold}
-.style5 {font-size: 12px}
--->
-</style>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -56,7 +47,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           </ul>
 		  <div style="background-image:url(images/gui_login_divide_bg.jpg); height:6px; background-repeat:repeat-x; "></div> 
         </div> 
-        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->EditRegion5<!-- InstanceEndEditable --></div> 
+        <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->&nbsp;<!-- InstanceEndEditable --></div> 
       </div></td> 
     <td width="653" background="images/teststrip.jpg" bgcolor="#DDD6C4" style="vertical-align:top;"><div class="container"> 
         <div id="loginspace"> </div> 
@@ -64,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">FEATURES</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -84,20 +75,22 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"></div>
-            
-<div id="articlepic">
-  <img src="authors/strangesafter.jpg" width="200" alt="Edith Stranges"></div>            <h4><b>Editorial: He is Risen</b></h4>
-<div id="authorname">Edith Stranges</div>
-
-
-
-<p align="center">F<em>or God loved the world that He gave his only  begotten Son, that whosoever believes in Him should not perish but have  everlasting life. John 3:16. </em>A familiar scripture, let it  now be a truth in yur life, for God is Love.
-</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &ldquo;Edith, you will ceate your world by the  power of my word. In your world is confusion, lack, disappointments but in my  word is peace, truth, trust, protection, prosperity and unlimited resources.  Allow my word to create my kingdom.&rdquo;</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Isn&rsquo;t that awesome. I pray the you would  be encouraged in your heart. As you read the many articles and visit the  advertisers and their events in this month&rsquo;s <strong>Love Express</strong>; keep them in prayer.</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We continued to be encouraged by your  prayer support and gifts to <strong>The Love  Express</strong> each month. God has indeed called you to partner with us, and for  that we are so grateful. Thank you so much for allowing us to come into your  home via <strong>The</strong> <strong>Love</strong> <strong>Express</strong>. Your  prayers for this ministry are so needed and are a tremendous encou&shy;ragement.</p>
+            <div><img src="images/nyack-college-photo.jpg" class="full-width-image" alt="" width="620" /> </div>
+            <h4 id="articleTitle">Nyack College School of Music<br>
+              Returns to Avery Fisher Hall, Lincoln Center</h4>
+            <h4 class="qa">              Celebrated Composer &amp; Conductor Dr. Victoria Bond Commissioned</h4>
+              <div id="authorname">  By Melissa Alcorn, Executive Director, and James Winans, Manager of Institutional Giving.
+                <!--SECTION LEFT END-->
+ </div>
+              
+              <p>Lauren  Noon came to New York to pursue a career in fashion. On a whim, she began  making bracelets, and Lauren&rsquo;s friends were so impressed that they encouraged  her to start selling them. While Lauren had a talent for making bracelets, she  wasn&rsquo;t as familiar with starting a business, she participated in the NYC Craft  Entrepreneurship Program in March 2014 to gain a better understanding of what  it takes to start and run a business. As a result of her inspirational  instructor and the tips she learned from the program, Lauren created &ldquo;Chains by  Lauren,&rdquo; - an Etsy online shop specializing in jewelry and accessories for men  and wo- men. Since the class&rsquo;s conclusion, Lauren has gone on to sell her  products online, and at craft fairs and trade shows as well.</p>
+              <p>The NYC Craft Entrepreneurship Program  started in January 2014 as a partnership with  the NYC Department of Small Business Ser- vices (SBS), Etsy, and Citi  Community Development. The free program is designed to teach makers of craft  goods the necessary skills to quickly start a small business online and earn ex&shy;tra  income from the sale of handmade products. Students are taught how to take  advantage of their creative skills by launching an online outlet to sell their  goods.</p>
+              <p>Classes are  led by experienced online craft-sellers, who teach students in  five sessions about basics such as marketing, online branding, and product  photography. Students apply what they&rsquo;ve learned to create their own online  store on Etsy, a leading marketplace for handmade goods. The program uses  Etsy's platform as a real-world learning lab, and combines SBS' experience in  helping small bu&shy;sinesses start, operate, and grow to provide the business  training. Past participants have exhibited and sold a wide range of products  such as jewelry, toys, clothing, paintings,  and even furniture.</p>
+              <p>Since the program&rsquo;s start, over 230 entrepreneurs have graduated  from the two week course, which has been held  in all five boroughs and conducted in both English and Spanish. The course  consists of five classes, each with its own distinct theme, and includes topics  such as &ldquo;Building and Marketing a Brand,&rdquo; &ldquo;Growing Your Business,&rdquo; and &ldquo;Pricing  Your Work.&rdquo; By the end of the course, participants have familiarized themselves  with a wide range of basic business principles that can be transferred to both  on-and-offline marketplaces. In addition, the curriculum  includes financial education and opportunities for coaching provided by the NYC  Office of Financial Empowerment.</p>
+              <p>The next round of NYC Craft  Entrepreneurship Program classes will be held in early 2015. Eligible applicants must reside in New York City have  at least one handmade craft item ready to sell, commit to attending four  weeknight classes and one Satur- day class, have never made any sales on  Etsy.com, have a debit/credit card and checking  account (necessary for sales transactions) and have regular access to a computer with an internet connection.</p>
+              <p> <strong><em>For more information, and to fill out an  application, visit http://bit.ly/NYCCEP. You can also support NYC Craft Entrepreneurs  by shopping at their stores on www.etsy.com.</em></strong>              </p>
 </div>
+          <div id="body_adspace"></div>
           <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
